--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,15 @@ code {
 }
 
 :root {
-  /* from coolers: https://coolors.co/f06543-e8e9eb-e0dfd5-313638-f09d51 */
-  --orange-soda:#F06543;
-  --platinum:#E8E9EB;
-  --alabaster:#E0DFD5;
-  --onyx:#313638;
-  --sandy-brown: #F09D51;
+  --main: rgb(44, 13, 58);
+  --greener:#105353;
+  --green:#019494;
+  --dark: black;
+  --brown: brown;
 }
 
 *  {
-  background: var(--alabaster);
+  background: var(--green);
 }
 
 a {
@@ -31,16 +30,16 @@ a {
 
 p {
   font-size: 18px;
-  color: var(--orange-soda);
+  color: var(--main);
   font-weight: bold;
-  background-color: var(--platinum);
+  background-color: var(--greener);
   text-align: center;
 }
 
 h1 {
   margin: auto 30px; 
   padding: 10px;
-  color: var(--onyx);
+  color: var(--dark);
   font-weight: bold;
 }
 
@@ -49,29 +48,29 @@ h1 {
   margin-left: 5px;
 }
 
-#navigation {
+#navbar {
   align-items: flex-end;
   font-size: 22px;
   text-decoration: none;
   align-content: center;
 }
 
-#navigation a {
-  color: var(--orange-soda);
+#navbar a {
+  color: var(--main);
   padding-left: 1em;
   font-weight: bold;
   text-decoration: none;
-  text-shadow: 1px 1px 2px var(--onyx);
+  text-shadow: 1px 1px 2px var(--dark);
 }
 
 .card {
-  background-color: var(--platinum);
+  background-color: var(--greener);
   border-radius: 5px;
   height: 400px;
   margin: 2rem;
   position: relative;
   width: 400px;
-  box-shadow: 0 2px 2px var(--onyx), 0 6px 12px var(--onyx);
+  box-shadow: 0 2px 2px var(--dark), 0 6px 12px var(--dark);
 }
 
 .card .img-container {
@@ -79,39 +78,39 @@ h1 {
   overflow: hidden;
   text-align: center;
   border-radius: 10px;
-  background-color: var(--platinum);
+  background-color: var(--greener);
 }
 
 .card .img-container img {
   width: 100%;
   padding: 25px;
   margin-bottom: 20px;
-  background-color: var(--platinum);
+  background-color: var(--greener);
 }
 
 .card .content {
   font-size: 18px;
-  background-color: var(--platinum);
-  color: var(--orange-soda);
+  background-color: var(--greener);
+  color: var(--main);
   font-weight: bold;
   text-align: center;
 }
 
 #project-icon {
-  background-color: var(--platinum);
+  background-color: var(--greener);
   padding: 5px;
 }
 
 #topics {
   font-size: small;
   font-style: italic;
-  color: var(--onyx);
+  color: var(--dark);
 }
 
 #card-title {
   margin-top: 10px;
-  color: var(--onyx);
-  text-shadow: 1px 1px 6px var(--sandy-brown);
+  color: var(--dark);
+  text-shadow: 1px 1px 6px var(--brown);
 }
 
 .wrapper {
@@ -134,63 +133,63 @@ h1 {
   padding: 10px;
 }
 
-#about-section {
+#about-me {
   margin: 2em;
 }
 
-#about-section p {
-  background-color: var(--alabaster);
-  color: var(--onyx);
+#about-me p {
+  background-color: var(--green);
+  color: var(--dark);
 }
 
-#contact-section {
+#contact-me {
   justify-content: center;
   margin: 20px;
   margin-left: 10em;
   margin-right: 10em;
 }
 
-#front-back ul {
+#code-terms ul {
   list-style-type: none;
 }
 
-#front-back ul li {
+#code-terms ul li {
   list-style-type: none;
 }
 
-#front-back h2 {
-  color: var(--onyx);
+#code-terms h2 {
+  color: var(--dark);
 }
 
-#front-back p {
-  background-color: var(--alabaster);
+#code-terms p {
+  background-color: var(--green);
 }
 
-#resume p {
-  background-color: var(--alabaster);
-  color: var(--onyx);
+#my-resume p {
+  background-color: var(--green);
+  color: var(--dark);
   margin-top: 5px;
 }
 
 #footer {
-  background-color: var(--onyx);
+  background-color: var(--dark);
 }
 
 #footer .icon {
-  background-color: var(--onyx);
+  background-color: var(--dark);
   margin-top: 20px;
 }
 
 #footer p {
-  background-color: var(--onyx);
+  background-color: var(--dark);
   margin-top: 8px;
 }
 
 #footer a {
   text-decoration: none;
-  color: var(--orange-soda);
+  color: var(--main);
 }
 
 #react-icon {
-  background-color: var(--onyx);
+  background-color: var(--dark);
 }
